# Reinforcement_Learning_Sailboat

./: .dockerignore  .gitignore  BERICHT_STRUKTUR.md  README.md  REWARD_ROADMAP.md  gazebo_ros2_interface.md  package.xml  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile  Makefile  docker-compose.yml  entrypoint.sh
docker/scripts/: launch_all.sh  setup_x11.sh
dummy_sailboat_sim/: config.py  dummy_node.py  reward_calculator.py  sailboat_gym_env.py  sandbox_ui.py  standalone_visualizer.py  train.py  visualizer_node.py
sailing_ws_gazebo/: README.md
sailing_ws_gazebo/src/opti_controller/: package.xml  setup.cfg  setup.py
sailing_ws_gazebo/src/opti_controller/launch/: boot.launch.py  boot_bridges.launch.py  opti_test.launch.py  validation_run.launch.py  vrx_testwelt.launch.py
sailing_ws_gazebo/src/opti_controller/opti_controller/: gazebo_tf_bridge.py  reset_service_node.py  sensor_transformer.py  validation_test.py  wind_vector.py
sailing_ws_gazebo/src/opti_controller/worlds/: minimal_world.sdf  test_world.world
sailing_ws_gazebo/src/sailing_plugins/: CMakeLists.txt  package.xml
sailing_ws_gazebo/src/sailing_plugins/src/: SailLimitPlugin.cc  SailingLiftDrag.cc  SailingLiftDrag.hh
sailing_ws_gazebo/src/vrx/vrx_gz/launch/: opti.launch.py
sailing_ws_gazebo/src/vrx/vrx_gz/worlds/: sydney_regatta_opti.sdf
sailing_ws_gazebo/src/vrx/vrx_urdf/opti_description/: CMakeLists.txt  package.xml
sailing_ws_gazebo/src/vrx/vrx_urdf/opti_description/meshes/: boat.stl  keel.stl  (+1 more)
sailing_ws_gazebo/src/vrx/vrx_urdf/opti_gazebo/: CMakeLists.txt  package.xml
(+7 files in other folders)
